k8s/deploy-lifecycle.yaml
apiVersion: apps/v1beta1 
kind: Deployment
metadata:
  name: demoweb 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demoweb 
    spec:
      containers:
      - name: demoweb
        image: peihsinsu/demoweb
        ports:
        - containerPort: 80
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "echo Hello from the postStart handler > /usr/share/message"]
          preStop:
            exec:
              command: ["/bin/sh","-c","while killall -0 node; do sleep 1; done"]
