k8s/deploy.yaml
apiVersion: apps/v1beta1 
kind: Deployment
metadata:
  name: demoweb 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demoweb 
    spec:
      containers:
      - name: demoweb
        image: gcr.io/simon-lab/demoweb:v20180530-001
        ports:
        - containerPort: 80
