k8s/service-nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: demoweb-nodeport
spec:
  selector:
    app: demoweb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
