k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demoweb
spec:
  selector:
    app: demoweb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
