k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoweb
spec:
  backend:
    serviceName: demoweb
    servicePort: 80
